--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>I started learning to code when I was 19 years old. I have completed Structural and Object Oriented Programming languages. Also Completed Data structures and Algoithms. I ❤️ Coding. </p>
               </div>
               <div class="skill-row">
-                <img class="food" src="Food.png" alt="food">
+                <img class="food" src="food.png" alt="food">
                 <h3>Chinese Food Challenge</h3>
                 <p>But my best skill is actually eating Chinese Dishes.I am the undesputed queen of Chinese Food Challenge. Chicken tripple rice and Veg chilli noodles are my favourite dishes.</p>
               </div>
